--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -1,14 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.InicioFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
+    <ScrollView
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:orientation="vertical">
+            
+            <android.support.v7.widget.CardView
+                android:layout_width="240dp"
+                android:layout_gravity="center"
+                android:layout_height="230dp"
+                app:cardCornerRadius="10dp"
+                android:elevation="10dp"
+                app:cardUseCompatPadding="true">
+                
+                
+                <ImageView
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:src="@drawable/logoturis"
+                    android:background="@android:color/black"
+                    />
+
+
+            </android.support.v7.widget.CardView>
+
+
+            <TextView
+                android:id="@+id/text"
+                android:layout_width="match_parent"
+                android:layout_height="178dp"
+                android:padding="30dp"
+                android:text="Descipcion de la app"
+                android:textSize="18dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+        
+    </ScrollView>
+    
+    
+    
 </FrameLayout>
