--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -9,9 +9,16 @@
     tools:showIn="@layout/app_bar_main">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="290dp"
         android:layout_height="match_parent"
         android:id="@+id/contenedor_fragment_1"
+        android:orientation="horizontal"
+        ></LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/contenedor_fragment_2"
         android:orientation="horizontal"
         ></LinearLayout>
 
