--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -11,8 +11,9 @@
 
     <android.support.v7.widget.CardView
         android:layout_gravity="center"
-        android:layout_width="350dp"
-        android:layout_height="300dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardUseCompatPadding="true"
         app:cardElevation="10dp"
         app:cardCornerRadius="10dp">
 
@@ -29,11 +30,12 @@
                 />
 
             <TextView
-                android:id="@+id/text"
-                android:textSize="18dp"
-                android:text=""
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:padding="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15dp"
+                android:textAlignment="center"
+                android:text="@string/descripcion_app"/>
 
         </LinearLayout>
 
