--- a/app/src/main/res/layout/fragment_lista.xml
+++ b/app/src/main/res/layout/fragment_lista.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/gridview"
+        android:numColumns="auto_fit"
         ></GridView>
 
 </FrameLayout>
