--- a/app/src/main/res/layout/item_lugar_grid.xml
+++ b/app/src/main/res/layout/item_lugar_grid.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:layout_width="190dp"
+<android.support.v7.widget.CardView android:layout_width="200dp"
 
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -20,7 +20,7 @@
 
         <android.support.constraint.ConstraintLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="170dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <ImageView
@@ -41,8 +41,8 @@
                 <TextView
                     android:gravity="center"
                     android:id="@+id/item_lugar_nombre"
-                    android:padding="15dp"
-                    android:textSize="19dp"
+                    android:paddingTop="10dp"
+                    android:textSize="12dp"
                     android:layout_width="match_parent"
                     android:textStyle="bold"
                     android:layout_height="wrap_content"
@@ -57,17 +57,19 @@
             android:id="@+id/item_lugar_descripcion_corta"
             android:layout_width="170dp"
             android:layout_height="0dp"
+            android:textSize="7sp"
             android:background="@android:color/black"
             android:textColor="@android:color/white"
             android:text="Description corta"
             android:gravity="center"
-            android:padding="4dp"
+            android:padding="2dp"
             />
         <TextView
             android:id="@+id/item_lugar_direccion"
             android:layout_width="match_parent"
             android:gravity="center"
-            android:padding="9dp"
+            android:textSize="12sp"
+            android:padding="3dp"
             android:background="@android:color/black"
             android:layout_height="match_parent"
             android:textColor="@color/gris_claro"
